--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
-	<link rel="stylesheet" href=protfolio.css>
+	<link rel="stylesheet" href=portfolio.css>
 </head>
 <body>
 	<nav>
