added fontawesome to portfolio.html and added github and mailto icons and links

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
 	<link rel="stylesheet" href=portfolio.css>
+	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<nav>
@@ -29,7 +30,8 @@
 	</main>
 	
 	<footer>
-		
+		<a href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
+		<a href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 	</footer>
 </body>
 </html>
