added structure to main

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,20 @@
 	</header>
 	
 	<main>
-		
+		<section>
+			<h3>Portfolio 1</h3>
+			<h4>dd.mm.yyyy</h4>
+		</section>
+
+		<section>
+			<h3>Portfolio 2</h3>
+			<h4>dd.mm.yyyy</h4>
+		</section>
+
+		<section>
+			<h3>Portfolio 3</h3>
+			<h4>dd.mm.yyyy</h4>
+		</section>
 	</main>
 	
 	<footer>
