improved structure of <main> and added placeholder text and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,18 +27,30 @@
 	
 	<main>
 		<section>
-			<h3>Portfolio 1</h3>
-			<h4>dd.mm.yyyy</h4>
+			<div>
+				<h3>Portfolio 1</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200"/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 
 		<section>
-			<h3>Portfolio 2</h3>
-			<h4>dd.mm.yyyy</h4>
+			<div>
+				<h3>Portfolio 2</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200"/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 
 		<section>
-			<h3>Portfolio 3</h3>
-			<h4>dd.mm.yyyy</h4>
+			<div>
+				<h3>Portfolio 3</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200"/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 	</main>
 	
