added basic positioning to navbar with nested flexbox

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 	<nav>
-		<div>
+		<div class="navbar">
 			<a>About</a>
 			<a>Portfolio</a>
 			<a>Contact</a>
 		</div>
-		<h1>Seb Lamberts</h1>
-		<a>Request CV</a>
+		<div>
+			<h1>Seb Lamberts</h1>
+		</div>
+		<div class="request-cv">
+			<a>Request CV</a>
+		</div>
 	</nav>
 	
 	<header>
