styled main section

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 				<h3>Portfolio 1</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 
@@ -44,7 +44,7 @@
 				<h3>Portfolio 2</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 
@@ -53,7 +53,7 @@
 				<h3>Portfolio 3</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 	</main>
