styled footer and added functionality to navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
 <body>
 	<nav>
 		<div class="navbar">
-			<a>About</a>
-			<a>Portfolio</a>
-			<a>Contact</a>
+			<a href="#about">About</a>
+			<a href="#portfolio">Portfolio</a>
+			<a href="#contact">Contact</a>
 		</div>
 		<div>
 			<h1>Seb Lamberts</h1>
@@ -22,14 +22,14 @@
 		</div>
 	</nav>
 	
-	<header>
+	<header id="about">
 		<div>
 			<h2>About</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
 	</header>
 	
-	<main>
+	<main id="portfolio">
 		<section>
 			<div>
 				<h3>Portfolio 1</h3>
@@ -58,7 +58,7 @@
 		</section>
 	</main>
 	
-	<footer>
+	<footer id="contact">
 		<a href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
 		<a href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 	</footer>
