doubled number of portfolio slots and tidied up portfolio.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,33 @@
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
+		
+		<section>
+			<div>
+				<h3>Portfolio 4</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</section>
+
+		<section>
+			<div>
+				<h3>Portfolio 5</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</section>
+
+		<section>
+			<div>
+				<h3>Portfolio 6</h3>
+				<h4>dd.mm.yyyy</h4>
+			</div>
+			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</section>
 	</main>
 	
 	<footer id="contact">
