created and linked project pages for all portfolio elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,59 +30,59 @@
 	</header>
 	
 	<main id="portfolio">
-		<section>
+		<a href="project-1.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 1</h3>
+				<h3>Project 1</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 
-		<section>
+		<a href="project-2.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 2</h3>
+				<h3>Project 2</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 
-		<section>
+		<a href="project-3.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 3</h3>
+				<h3>Project 3</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 		
-		<section>
+		<a href="project-4.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 4</h3>
+				<h3>Project 4</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 
-		<section>
+		<a href="project-5.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 5</h3>
+				<h3>Project 5</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 
-		<section>
+		<a href="project-6.html" target="_blank"><section>
 			<div>
-				<h3>Portfolio 6</h3>
+				<h3>Project 6</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 	</main>
 	
 	<footer id="contact">
