--- a/project-5.html
+++ b/project-5.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Project Page</title>
+	<title>Project 5</title>
 	<link rel="stylesheet" href=project-page.css>
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
@@ -24,7 +24,7 @@
 		<img src="https://via.placeholder.com/1050x600"/>
 		<div>
 			<div class="project-title">
-				<h2>Project 1</h2>
+				<h2>Project 5</h2>
 				<h3>dd.mm.yyyy</h3>
 			</div>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra, metus eu vulputate feugiat, ipsum nibh malesuada augue, eu vulputate massa risus id massa. Vestibulum consequat ac urna consequat scelerisque. Sed molestie varius mauris ac rhoncus. Nam ultricies luctus ex. Integer sit amet pellentesque ipsum. Mauris tincidunt feugiat ex, vitae sagittis elit efficitur sit amet. Nam ut rhoncus mauris. Suspendisse enim nisi, dapibus ut interdum quis, fermentum at velit. Maecenas interdum mauris id diam blandit, id faucibus magna volutpat. Integer tempor tincidunt nisl eget mollis. Vivamus convallis vel dolor sit amet pellentesque. Curabitur lacinia est vel tellus lacinia, sed imperdiet eros sagittis. Sed auctor finibus mi, fermentum vestibulum lorem malesuada eget. Nullam vestibulum est condimentum, faucibus mi eleifend, tempus odio. Duis ex tortor, pretium vel felis eget, pulvinar scelerisque nunc.</p>
