--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 			<a href="#portfolio">Portfolio</a>
 			<a href="#contact">Contact</a>
 		</div>
-		<div>
+		<div class="title">
 			<h1>Seb Lamberts</h1>
 		</div>
 		<div class="request-cv">
@@ -35,7 +35,7 @@
 				<h3>Project 1</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
@@ -44,7 +44,7 @@
 				<h3>Project 2</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
@@ -53,7 +53,7 @@
 				<h3>Project 3</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section>
 		
@@ -62,7 +62,7 @@
 				<h3>Project 4</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
@@ -71,7 +71,7 @@
 				<h3>Project 5</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
@@ -80,7 +80,7 @@
 				<h3>Project 6</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200" width=350 height=200/>
+			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 	</main>
