--- a/project-1.html
+++ b/project-1.html
@@ -12,7 +12,7 @@
 		<div class="navbar">
 			<a href="portfolio.html">Home</a>
 		</div>
-		<div>
+		<div class="title">
 			<h1>Seb Lamberts</h1>
 		</div>
 		<div class="request-cv">
