--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 			</div>
 			<img src="https://via.placeholder.com/350x200"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</section>
+		</section></a>
 		
 		<a href="project-4.html" target="_blank"><section>
 			<div>
