adjusted padding on main section in portfolio.html. added linkedin button to all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,7 @@
 	
 	<footer id="contact">
 		<a href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
+		<a href="www.linkedin.com/in/seb-lamberts" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 		<a href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 	</footer>
 </body>
