--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+	<title>Seb Lamberts - Portfolio</title>
+	<link rel="stylesheet" href=normalize.css>
 	<link rel="stylesheet" href=portfolio.css>
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="index">
 	<nav>
 		<div class="navbar">
 			<a href="#about">About</a>
@@ -18,7 +19,7 @@
 			<h1>Seb Lamberts</h1>
 		</div>
 		<div class="request-cv">
-			<a>Request CV</a>
+			<a href="#">Request CV</a>
 		</div>
 	</nav>
 	
@@ -30,57 +31,57 @@
 	</header>
 	
 	<main id="portfolio">
-		<a href="project-1.html" target="_blank"><section>
+		<a href="project-1.html"><section>
 			<div>
 				<h3>Project 1</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 1"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
-		<a href="project-2.html" target="_blank"><section>
+		<a href="project-2.html"><section>
 			<div>
 				<h3>Project 2</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 2"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
-		<a href="project-3.html" target="_blank"><section>
+		<a href="project-3.html"><section>
 			<div>
 				<h3>Project 3</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 3"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 		
-		<a href="project-4.html" target="_blank"><section>
+		<a href="project-4.html"><section>
 			<div>
 				<h3>Project 4</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 4"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
-		<a href="project-5.html" target="_blank"><section>
+		<a href="project-5.html"><section>
 			<div>
 				<h3>Project 5</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 5"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 
-		<a href="project-6.html" target="_blank"><section>
+		<a href="project-6.html"><section>
 			<div>
 				<h3>Project 6</h3>
 				<h4>dd.mm.yyyy</h4>
 			</div>
-			<img src="https://via.placeholder.com/350x200"/>
+			<img src="https://via.placeholder.com/350x200" alt="Project 6"/>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</section></a>
 	</main>
