--- a/project-4.html
+++ b/project-4.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Project 4</title>
-	<link rel="stylesheet" href=project-page.css>
+	<link rel="stylesheet" href=normalize.css>
+	<link rel="stylesheet" href=portfolio.css>
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="project-page">
 	<nav>
 		<div class="navbar">
-			<a href="portfolio.html">Home</a>
+			<a href="index.html">Home</a>
 		</div>
 		<div class="title">
 			<h1>Seb Lamberts</h1>
@@ -21,7 +22,7 @@
 	</nav>
 	
 	<header id="about">
-		<img src="https://via.placeholder.com/1050x600"/>
+		<img src="https://via.placeholder.com/1050x600" alt="Project 4"/>
 		<div>
 			<div class="project-title">
 				<h2>Project 4</h2>
