added content and played around with styling

--- a/index.html
+++ b/index.html
@@ -26,36 +26,41 @@
 	<header id="about">
 		<div>
 			<h2>About</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			<p>Hi, my name is Seb, and I am a full-stack software developer from York.<br><br>
+			I am currently in the final weeks of iO Academy's Full-Stack Track bootcamp,
+			being provided by the EyUp Coding academy in Sheffield.<br>
+			I have a keen interest in problem-solving, and am geared towards back-end technologies.<br>
+			I am also a Certified Scrum Master.<br><br>
+			Outside of programming I enjoy tabletop gaming, live music, and bad movies.</p>
 		</div>
 	</header>
 	
 	<main id="portfolio">
 		<a href="project-1.html"><section>
 			<div>
-				<h3>Project 1</h3>
-				<h4>dd.mm.yyyy</h4>
+				<h3>Property Listing Website</h3>
+				<h4>20.05.2022</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" alt="Project 1"/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>A mock property listing website built using MySQL, PHP, and Bootstrap 5. Data was taken from a custom-built API</p>
 		</section></a>
 
 		<a href="project-2.html"><section>
 			<div>
-				<h3>Project 2</h3>
-				<h4>dd.mm.yyyy</h4>
+				<h3>JavaScript Game</h3>
+				<h4>22.04.2022</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" alt="Project 2"/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>A browser game built using JavaScript. Players have to try to locate all the targets before they run out of lives</p>
 		</section></a>
 
 		<a href="project-3.html"><section>
 			<div>
-				<h3>Project 3</h3>
-				<h4>dd.mm.yyyy</h4>
+				<h3>Food Delivery App</h3>
+				<h4>05.05.2022</h4>
 			</div>
 			<img src="https://via.placeholder.com/350x200" alt="Project 3"/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>A mock food delivery app built using React and Sass.</p>
 		</section></a>
 		
 		<a href="project-4.html"><section>
