--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>Seb Lamberts - Portfolio</title>
 	<link rel="stylesheet" href="custom.css">
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	<script src="index.js" defer></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
@@ -15,28 +18,25 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="nav navbar-nav">
-					<li class="nav-item"><a href="#about" class="text-decoration-none nav-link link-white">About</a></li>
-					<li class="nav-item"><a href="#portfolio" class="text-decoration-none nav-link link-light">Portfolio</a></li>
-					<li class="nav-item"><a href="#contact" class="text-decoration-none nav-link link-light">Contact</a></li>
+					<li class="nav-item"><a href="#" class="nav-link text-white">About</a></li>
+					<li class="nav-item"><a href="#projects" class="nav-link text-white">Projects</a></li>
+					<li class="nav-item"><a href="#" class="nav-link disabled">Download CV</a></li>
 				</ul>
 			</div>
 			<div class="navbar-header position-absolute top-50 start-50 translate-middle">
 				<a class="text-decoration-none text-white h1 mx-0" href="#">Seb Lamberts</a>
 			</div>
-			<ul class="request-cv nav navbar-nav">
-				<li class="nav-item"><a href="#" class="text-decoration-none nav-link link-light">Download CV</a></li>
-			</ul>
 		</div>
 	</nav>
-	
 	<header id="about" class="container-fluid"
 			style="background-image: url('./resources/about-background.jpg');
 			background-color: black;
 			background-position: top left;
-			background-size: 1920px;">
-		<div class="d-flex flex-column align-items-start col-md-6 col-xl-4 offset-md-3 offset-xl-8 p-2">
-			<h3 class="d-inline-flex bg-black text-white px-2">About</h3>
-			<p class="d-inline-flex bg-black text-white p-2">Hi, my name is Seb, and I am a full-stack software developer from York.<br><br>
+			background-size: 1920px;
+			height: 600px;
+			display: flex;">
+		<div class="fadeonload d-flex flex-column align-items-start col col-md-8 col-lg-6 m-auto p-2">
+			<p class="d-inline-flex bg-black text-white p-2 fs-5">Hi, my name is Seb, and I am a full-stack software developer from York.<br><br>
 			I am currently in the final weeks of iO Academy's Full-Stack Track bootcamp,
 			being provided by the EyUp Coding academy in Sheffield.<br>
 			I have a keen interest in problem-solving, and am geared towards back-end technologies.<br>
@@ -44,10 +44,45 @@
 			Outside of programming I enjoy tabletop gaming, live music, and bad movies.</p>
 		</div>
 	</header>
-	<main id="portfolio">
-		<h2 class="text-white text-center mt-5 mb-5">Projects</h2>
-		<div class="container">
+	<main>
+		<span id="projects" style="position: relative; top: -104px"></span>
+		<h2 class="projects-header text-white text-center bg-black pt-5 pb-2 mb-5">Projects</h2>
+		<div class="container-fluid d-flex justify-content-center px-5">
 			<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+				<div class="col p-2">
+					<div class="card border-0">
+						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 1">
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title">Property Listing Website</h5>
+							<h6 class="card-subtitle mb-1 text-muted">20.05.2022</h6>
+							<p class="card-text">A mock property listing website built using MySQL, PHP, and Bootstrap 5. Data was taken from a custom-built API</p>
+							<a href="project-1.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+						</div>
+					</div>
+				</div>
+				<div class="col p-2">
+					<div class="card border-0">
+						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 2">
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title">JavaScript Game</h5>
+							<h6 class="card-subtitle mb-1 text-muted">22.04.2022</h6>
+							<p class="card-text">A browser game built using JavaScript. Players have to try to locate all the targets before they run out of lives</p>
+							<a href="project-2.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+						</div>
+					</div>
+				</div>
+				<div class="col p-2">
+					<div class="card border-0">
+						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 3">
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title">Food Delivery App</h5>
+							<h6 class="card-subtitle mb-1 text-muted">05.05.2022</h6>
+							<p class="card-text">A mock food delivery app built using React and Sass.</p>
+							<a href="project-3.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+						</div>
+					</div>
+				</div>
+
 				<div class="col p-2">
 					<div class="card border-0">
 						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 1">
@@ -84,14 +119,11 @@
 			</div>
 		</div>
 	</main>
-	
 	<footer id="contact" class="navbar navbar-dark fixed-bottom bg-black d-flex justify-content-center">
-		<div>
+		<div class="fs-4">
 			<a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
 			<a class="link-light" href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 		</div>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
 </html>
