--- a/project-1.html
+++ b/project-1.html
@@ -4,41 +4,85 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Project 1</title>
-	<link rel="stylesheet" href=normalize.css>
-	<link rel="stylesheet" href=portfolio.css>
+	<link rel="stylesheet" href=custom.css>
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
-<body class="project-page">
-	<nav>
-		<div class="navbar">
-			<a href="index.html">Home</a>
-		</div>
-		<div class="title">
-			<h1>Seb Lamberts</h1>
-		</div>
-		<div class="request-cv">
-			<a>Request CV</a>
+<body class="project-page" style="background-image: url('./resources/about-background.jpg');
+			background-color: black;
+			background-position: top left;
+			background-size: 1920px;
+			background-repeat: no-repeat;
+			background-attachment: fixed;">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+		<div class="container-fluid">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="nav navbar-nav">
+					<li class="nav-item"><a href="index.html" class="nav-link text-white">About</a></li>
+					<li class="nav-item"><a href="index.html#projects" class="nav-link text-white">Projects</a></li>
+					<li class="nav-item"><a href="#" class="nav-link disabled">Download CV</a></li>
+				</ul>
+			</div>
+			<div class="navbar-header position-absolute top-50 start-50 translate-middle">
+				<a class="text-decoration-none text-white h1 mx-0" href="index.html">Seb Lamberts</a>
+			</div>
 		</div>
 	</nav>
-	
-	<header id="about">
-		<img src="https://via.placeholder.com/1050x600" alt="Project 1"/>
-		<div>
-			<div class="project-title">
-				<h2>Project 1</h2>
-				<h3>dd.mm.yyyy</h3>
+	<main class="container-fluid">
+		<div class="row align-items-center mt-5">
+			<div class="col-12 col-xl-7">
+<!--				<img src="https://via.placeholder.com/1050x600" alt="Project 1"/>-->
+				<div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-hover="false">
+					<div class="carousel-indicators">
+						<button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+						<button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+						<button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					</div>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="https://via.placeholder.com/1050x600" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="https://via.placeholder.com/1050x600/FFFFFF" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="https://via.placeholder.com/1050x600/0000FF" class="d-block w-100" alt="...">
+						</div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra, metus eu vulputate feugiat, ipsum nibh malesuada augue, eu vulputate massa risus id massa. Vestibulum consequat ac urna consequat scelerisque. Sed molestie varius mauris ac rhoncus. Nam ultricies luctus ex. Integer sit amet pellentesque ipsum. Mauris tincidunt feugiat ex, vitae sagittis elit efficitur sit amet. Nam ut rhoncus mauris. Suspendisse enim nisi, dapibus ut interdum quis, fermentum at velit. Maecenas interdum mauris id diam blandit, id faucibus magna volutpat. Integer tempor tincidunt nisl eget mollis. Vivamus convallis vel dolor sit amet pellentesque. Curabitur lacinia est vel tellus lacinia, sed imperdiet eros sagittis. Sed auctor finibus mi, fermentum vestibulum lorem malesuada eget. Nullam vestibulum est condimentum, faucibus mi eleifend, tempus odio. Duis ex tortor, pretium vel felis eget, pulvinar scelerisque nunc.</p>
-			<p>GitHub: <a href="https://github.com/haefnir"><i class="fa-brands fa-github"></i></a></p>
+			<div class="col-12 col-xl-5 mt-3 mt-xl-0">
+				<div>
+					<div class="project-title bg-black text-white p-2">
+						<h2 class="d-inline-block">Project 1</h2>
+						<h5 class="d-inline-block text-muted">dd.mm.yyyy</h5>
+					</div>
+					<p class="bg-black text-white p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra, metus eu vulputate feugiat, ipsum nibh malesuada augue, eu vulputate massa risus id massa. Vestibulum consequat ac urna consequat scelerisque. Sed molestie varius mauris ac rhoncus. Nam ultricies luctus ex. Integer sit amet pellentesque ipsum. Mauris tincidunt feugiat ex, vitae sagittis elit efficitur sit amet. Nam ut rhoncus mauris. Suspendisse enim nisi, dapibus ut interdum quis, fermentum at velit. Maecenas interdum mauris id diam blandit, id faucibus magna volutpat. Integer tempor tincidunt nisl eget mollis. Vivamus convallis vel dolor sit amet pellentesque. Curabitur lacinia est vel tellus lacinia, sed imperdiet eros sagittis. Sed auctor finibus mi, fermentum vestibulum lorem malesuada eget. Nullam vestibulum est condimentum, faucibus mi eleifend, tempus odio. Duis ex tortor, pretium vel felis eget, pulvinar scelerisque nunc.</p>
+					<p class="d-inline-block bg-black text-white p-2">GitHub: <a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github ms-1"></i></a></p>
+					<p class="d-inline-block bg-black text-white p-2 ms-2">Live: <a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square ms-1"></i></a></p>
+				</div>
+			</div>
 		</div>
-	</header>
-	
-	
-	
-	<footer id="contact">
-		<a href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
-		<a href="https://www.linkedin.com/in/seb-lamberts" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-		<a href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+	</main>
+
+
+	<footer id="contact" class="navbar navbar-dark fixed-bottom bg-black d-flex justify-content-center">
+		<div class="fs-4">
+			<a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
+			<a class="link-light" href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+		</div>
 	</footer>
+	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
 </html>
