--- a/project-1.html
+++ b/project-1.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href=custom.css>
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 </head>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript" defer></script>
+<script src="https://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript" defer></script>
 <body class="project-page" style="background-image: url('./resources/about-background.jpg');
 			background-color: black;
 			background-position: top left;
