--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Seb Lamberts - Portfolio</title>
+	<title>Seb Lamberts</title>
 	<link rel="stylesheet" href="custom.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="./resources/icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./resources/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./resources/icon/favicon-16x16.png">
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
@@ -20,7 +23,7 @@
 				<ul class="nav navbar-nav">
 					<li class="nav-item"><a href="#" class="nav-link text-white">About</a></li>
 					<li class="nav-item"><a href="#projects" class="nav-link text-white">Projects</a></li>
-					<li class="nav-item"><a href="#" class="nav-link disabled">Download CV</a></li>
+					<li class="nav-item"><a href="./resources/Seb%20Lamberts%20CV.pdf" class="nav-link text-white" download>Download CV</a></li>
 				</ul>
 			</div>
 			<div class="navbar-header position-absolute top-50 start-50 translate-middle">
@@ -51,80 +54,63 @@
 		<h2 class="projects-header text-white text-center bg-black pt-5 pb-2 mb-5">Projects</h2>
 		<div class="container-fluid d-flex justify-content-center px-5">
 			<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
+
 				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 1">
+					<div class="card border-0 fadein-scroll">
+						<img src="./resources/academy-portal/academyPortalMain.png" class="card-img-top" alt="Screenshot of a website homepage">
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title">iO Academy Portal</h5>
+							<h6 class="card-subtitle mb-1 text-muted">31.05.2022</h6>
+							<p class="card-text">A legacy project where we built onto a portal for the iO Academy using Slim</p>
+							<a href="academy-portal.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col p-2">
+					<div class="card border-0 fadein-scroll">
+						<img src="./resources/penny-lane/pennyLaneLogo.png" class="card-img-top" alt="Property listing website logo">
 						<div class="card-body d-flex flex-column">
 							<h5 class="card-title">Property Listing Website</h5>
 							<h6 class="card-subtitle mb-1 text-muted">20.05.2022</h6>
 							<p class="card-text">A mock property listing website built using MySQL, PHP, and Bootstrap 5. Data was taken from a custom-built API</p>
-							<a href="project-1.html" class="btn btn-dark align-self-center mt-auto">See more</a>
-						</div>
-					</div>
-				</div>
-				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 2">
-						<div class="card-body d-flex flex-column">
-							<h5 class="card-title">JavaScript Game</h5>
-							<h6 class="card-subtitle mb-1 text-muted">22.04.2022</h6>
-							<p class="card-text">A browser game built using JavaScript. Players have to try to locate all the targets before they run out of lives</p>
-							<a href="project-2.html" class="btn btn-dark align-self-center mt-auto">See more</a>
-						</div>
-					</div>
-				</div>
-				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 3">
-						<div class="card-body d-flex flex-column">
-							<h5 class="card-title">Food Delivery App</h5>
-							<h6 class="card-subtitle mb-1 text-muted">05.05.2022</h6>
-							<p class="card-text">A mock food delivery app built using React and Sass.</p>
-							<a href="project-3.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+							<a href="penny-lane.html" class="btn btn-dark align-self-center mt-auto">See more</a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 1">
-						<div class="card-body d-flex flex-column">
-							<h5 class="card-title">Property Listing Website</h5>
-							<h6 class="card-subtitle mb-1 text-muted">20.05.2022</h6>
-							<p class="card-text">A mock property listing website built using MySQL, PHP, and Bootstrap 5. Data was taken from a custom-built API</p>
-							<a href="project-1.html" class="btn btn-dark align-self-center mt-auto">See more</a>
-						</div>
-					</div>
-				</div>
-				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 2">
-						<div class="card-body d-flex flex-column">
-							<h5 class="card-title">JavaScript Game</h5>
-							<h6 class="card-subtitle mb-1 text-muted">22.04.2022</h6>
-							<p class="card-text">A browser game built using JavaScript. Players have to try to locate all the targets before they run out of lives</p>
-							<a href="project-2.html" class="btn btn-dark align-self-center mt-auto">See more</a>
-						</div>
-					</div>
-				</div>
-				<div class="col p-2">
-					<div class="card border-0">
-						<img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 3">
+					<div class="card border-0 fadein-scroll">
+						<img src="./resources/food-delivery/foodDeliveryMain.png" class="card-img-top" alt="Screenshot of a food delivery application">
 						<div class="card-body d-flex flex-column">
 							<h5 class="card-title">Food Delivery App</h5>
 							<h6 class="card-subtitle mb-1 text-muted">05.05.2022</h6>
 							<p class="card-text">A mock food delivery app built using React and Sass.</p>
-							<a href="project-3.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+							<a href="food-delivery.html" class="btn btn-dark align-self-center mt-auto">See more</a>
 						</div>
 					</div>
 				</div>
+
+				<div class="col p-2 offset-xl-4">
+					<div class="card border-0 fadein-scroll">
+						<img src="./resources/gopher-glory/gopherGloryMain.png" class="card-img-top" alt="JavaScript game splash screen">
+						<div class="card-body d-flex flex-column">
+							<h5 class="card-title">JavaScript Game</h5>
+							<h6 class="card-subtitle mb-1 text-muted">22.04.2022</h6>
+							<p class="card-text">A browser game built using JavaScript. Players have to try to locate all the targets before they run out of lives</p>
+							<a href="gopher-glory.html" class="btn btn-dark align-self-center mt-auto">See more</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</main>
 	<footer id="contact" class="navbar navbar-dark fixed-bottom bg-black d-flex justify-content-center">
 		<div class="fs-4">
 			<a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
-			<a class="link-light" href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+			<a class="link-light" href="mailto:lamberts.seb@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 		</div>
 	</footer>
 </body>
