--- a/penny-lane.html
+++ b/penny-lane.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Project 1</title>
-	<link rel="stylesheet" href=custom.css>
+	<title>Seb Lamberts</title>
+	<link rel="stylesheet" href="custom.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="./resources/icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./resources/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./resources/icon/favicon-16x16.png">
 	<script src="https://kit.fontawesome.com/2328fcd1b3.js" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript" defer></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js" defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
+	<script src="index.js" defer></script>
 </head>
 <body class="project-page" style="background-image: url('./resources/about-background.jpg');
 			background-color: black;
@@ -24,7 +28,7 @@
 				<ul class="nav navbar-nav">
 					<li class="nav-item"><a href="index.html" class="nav-link text-white">About</a></li>
 					<li class="nav-item"><a href="index.html#projects" class="nav-link text-white">Projects</a></li>
-					<li class="nav-item"><a href="#" class="nav-link disabled">Download CV</a></li>
+					<li class="nav-item"><a href="./resources/Seb%20Lamberts%20CV.pdf" class="nav-link text-white" download>Download CV</a></li>
 				</ul>
 			</div>
 			<div class="navbar-header position-absolute top-50 start-50 translate-middle">
@@ -35,7 +39,7 @@
 	<main class="container-fluid">
 		<div class="row align-items-center mt-5">
 			<div class="col-12 col-xl-7">
-				<div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-hover="false">
+				<div id="carouselIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-hover="false">
 					<div class="carousel-indicators">
 						<button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 						<button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -43,13 +47,13 @@
 					</div>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="https://via.placeholder.com/1050x600" class="d-block w-100" alt="...">
+							<img src="./resources/penny-lane/pennyLaneLogo.png" class="d-block w-100" alt="Penny Lane Logo">
 						</div>
 						<div class="carousel-item">
-							<img src="https://via.placeholder.com/1050x600/FFFFFF" class="d-block w-100" alt="...">
+							<img src="./resources/penny-lane/pennyLaneMain.png" class="d-block w-100" alt="Screenshot of main page">
 						</div>
 						<div class="carousel-item">
-							<img src="https://via.placeholder.com/1050x600/0000FF" class="d-block w-100" alt="...">
+							<img src="./resources/penny-lane/pennyLaneProperty.png" class="d-block w-100" alt="Screenshot of property page">
 						</div>
 					</div>
 					<button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -65,12 +69,15 @@
 			<div class="col-12 col-xl-5 mt-3 mt-xl-0">
 				<div>
 					<div class="project-title bg-black text-white p-2">
-						<h2 class="d-inline-block">Project 1</h2>
-						<h5 class="d-inline-block text-muted">dd.mm.yyyy</h5>
+						<h2 class="d-inline-block">Property Listing Website</h2>
+						<h5 class="d-inline-block text-muted">20.05.2022</h5>
 					</div>
-					<p class="bg-black text-white p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra, metus eu vulputate feugiat, ipsum nibh malesuada augue, eu vulputate massa risus id massa. Vestibulum consequat ac urna consequat scelerisque. Sed molestie varius mauris ac rhoncus. Nam ultricies luctus ex. Integer sit amet pellentesque ipsum. Mauris tincidunt feugiat ex, vitae sagittis elit efficitur sit amet. Nam ut rhoncus mauris. Suspendisse enim nisi, dapibus ut interdum quis, fermentum at velit. Maecenas interdum mauris id diam blandit, id faucibus magna volutpat. Integer tempor tincidunt nisl eget mollis. Vivamus convallis vel dolor sit amet pellentesque. Curabitur lacinia est vel tellus lacinia, sed imperdiet eros sagittis. Sed auctor finibus mi, fermentum vestibulum lorem malesuada eget. Nullam vestibulum est condimentum, faucibus mi eleifend, tempus odio. Duis ex tortor, pretium vel felis eget, pulvinar scelerisque nunc.</p>
-					<p class="d-inline-block bg-black text-white p-2">GitHub: <a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github ms-1"></i></a></p>
-					<p class="d-inline-block bg-black text-white p-2 ms-2">Live: <a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square ms-1"></i></a></p>
+					<p class="bg-black text-white p-2">This project was completed as part of the EyUp coding academy during a 4-day sprint.<br>
+					We were asked to take a custom-built RESTful API and create a mock property listings website with the data.<br>
+					We opted to use PHP and Bootstrap 5 to build this project, and followed OOP design patterns utilising database entities and hydrators, while maintaining SOLID principles.<br><br>
+					I was responsible for the API handling, after which I worked on unit testing and resolving merge conflicts to enable the team to continue working in parallel to each other</p>
+					<p class="d-inline-block bg-black text-white p-2">GitHub: <a class="link-light" href="https://github.com/iO-Academy/2022-mar-property-listing" target="_blank"><i class="fa-brands fa-github ms-1"></i></a></p>
+					<p class="d-inline-block bg-black text-white p-2 ms-2">Live: <a class="link-light" href="https://dev.io-academy.uk/projects/2022-march/2022-mar-property-listing/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square ms-1"></i></a></p>
 				</div>
 			</div>
 		</div>
@@ -78,7 +85,7 @@
 	<footer id="contact" class="navbar navbar-dark fixed-bottom bg-black d-flex justify-content-center">
 		<div class="fs-4">
 			<a class="link-light" href="https://github.com/haefnir" target="_blank"><i class="fa-brands fa-github"></i></a>
-			<a class="link-light" href="mailto:seb.lamberts@eyup.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+			<a class="link-light" href="mailto:lamberts.seb@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 		</div>
 	</footer>
 </body>
